testdata/baselines/reference/compiler/subtypeReductionWithAnyFunctionType.errors.txt
subtypeReductionWithAnyFunctionType(4,1): error TS1128: Declaration or statement expected.
subtypeReductionWithAnyFunctionType(4,38): error TS1128: Declaration or statement expected.
subtypeReductionWithAnyFunctionType(4,38): error TS1005: '{' expected.

==== subtypeReductionWithAnyFunctionType (3 errors) ====
    
    // https://github.com/microsoft/typescript-go/issues/849
    
    declare function useMemo<T>(func: () => T): T;
    ~~~~~~~
!!! error TS1128: Declaration or statement expected.
                                         ~~
!!! error TS1128: Declaration or statement expected.
                                         ~~
!!! error TS1005: '{' expected.
    
    function getPredicate(alwaysTrue: boolean) {
        const predicate: (input: string) => boolean = useMemo(() => {
            if (alwaysTrue) {
                return () => true;
            }
            return x => x.length > 0;
        });
        return predicate;
    }
    
    // https://github.com/microsoft/typescript-go/issues/1016
    
    declare function compact<T>(array: T[]): T[];
    declare function makeFooer(): Fooer;
    interface Fooer {
        foo: (v: string) => string;
    }
    function f() {
        const _ = compact([makeFooer(), { foo: (v) => v }]);
    }
    
